# ollama_proxy_server

./: .env.example  .gitignore  .gitlab-ci.yml  AUTO_ROUTING_DOCUMENTATION.md  BRANDING_GUIDE.md  CONTRIBUTING.md  Caddyfile  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  NEXT_THREAD_HANDOFF.md  README.md  SEARXNG_SETUP.md  UPDATES.md  alembic.ini  authorized_users.txt  config.ini  docker-compose.searxng.yml  example.config.ini  gunicorn_conf.py  install.bat  install_ollama_servers.sh  purge_bloat.py  pyproject.toml  requirements.txt  requirements_dev.txt  reset.bat  reset.sh  reset_admin_password.bat  reset_admin_password.py  reset_admin_password.sh  run.sh  run_windows.bat  setup.py  setup_service.sh  setup_wizard.py  todo.md  tox.ini
.github/workflows/: ci.yml  docker-publish.yml
Living_AI/bitcoin_overloard/: STATIC_PAGE_UPGRADE_PLAN.md  UPGRADE_COMPLETE_SUMMARY.md
Living_AI/bitcoin_overloard/docs/: index.html
Living_AI/bitcoin_overloard/static/js/: dashboard.js
alembic/: env.py  script.py.mako
alembic/versions/: 20250904_183235_initial_migration.py  78bacf39d498_add_ollama_servers_table.py
app/: __init__.py  main.py  main.py(2 hunks)
app/api/: __init__.py
app/api/v1/: __init__.py  dependencies.py
app/api/v1/routes/: __init__.py  admin.py  architect.py  conception.py  conversations.py  datastores.py  evaluations.py  health.py  importer.py  node_builder.py  openai_compat.py  openai_compat_simple.py  openai_proxy.py  personalities.py  proxy.py  (+5 more)
app/core/: __init__.py  architect_manager.py  assets.py  auto_router.py  benchmarks.py  binary_manager.py  bot_manager.py  chat_web_search.py  codebase_indexer.py  config.py  encryption.py  events.py  instance_manager.py  knowledge_importer.py  logging_config.py  lollms_system.py  mcp_manager.py  memory_manager.py  model_info_fetcher.py  model_knowledge.json  model_sorter.py  ollama_web_search.py  openrouter_credits.py  openrouter_endpoint_checker.py  openrouter_model_sorter.py  openrouter_scraper.py  openrouter_translator.py  personalities_manager.py  pricing_utils.py  priority_calculator.py  priority_modes.py  professional_auto_router.py  rag_service.py  retry.py  searxng_search.py  searxng_service.py  security.py  simple_search.py  skills_manager.py  smart_priority_grouper.py  (+6 more)
app/crud/: __init__.py  apikey_crud.py  conversation_crud.py  init.py  log_crud.py  model_metadata_crud.py  server_crud.py  settings_crud.py  user_crud.py
app/database/: __init__.py  base.py  migrations.py  models.py  session.py
app/nodes/: __init__.py  base.py  registry.py
app/nodes/custom/: __init__.py
app/nodes/standard/: __init__.py  cognitive_nodes.py  composition_nodes.py  datastore_node.py  identity_nodes.py  io_nodes.py  llm_chat_node.py  logic_nodes.py  rag_nodes.py  routing_nodes.py  search_nodes.py  tool_nodes.py  utility_nodes.py  vision_node.py
app/personalities/: lollms.md
app/schema/: __init__.py  apikey.py  conversation.py  server.py  settings.py  user.py
app/skills/: hallucination-mitigation.md  lps.md  node-builder.md  node-studio.md  workflow-architect.md
app/static/: .gitkeep
app/static/css/: styles.css
app/static/datastores/: 47ae6778a5ac1f7a.db-shm  47ae6778a5ac1f7a.db-wal  500fa3979231a41a.pca.json
app/static/logos/: README.md
app/templates/admin/: agents.html  architect.html  base.html  bots.html  bundles.html  chains.html  conception.html  dashboard.html  datastores.html  edit_agent.html  edit_ensemble.html  edit_pool.html  edit_server.html  edit_user.html  embedding_playground.html  ensembles.html  evaluation_report.html  evaluations.html  explore_dataset.html  help.html  instances.html  key_created.html  live_status.html  login.html  logs.html  manage_datastore.html  manage_server.html  memory_systems.html  model_playground.html  models_manager.html  models_manager_row.html  personalities.html  routers.html  servers.html  settings.html  setup_wizard.html  skills.html  statistics.html  tools.html  user_details.html  (+4 more)
app/templates/partials/: _file_upload.html  _flash_messages.html
app/tools/: arxiv_search.py  lollms_bot_tools.py  memory_tool.py  skill_loader.py  stackoverflow_search.py  url_scraper.py  web_search.py  wikipedia_search.py  youtube_transcript.py
benchmarks/: expanded_topics_benchmark.json
docs/: LCP_PROTOCOL.md  LTP_PROTOCOL.md
ollama_proxy_server/: add_user.py  authorized_users.txt.example  config.ini.example  main.py
tests/: __init__.py  test_dummy.py
useful_scripts/: benchmark_routing.py  configure_service.sh  install_ollama_servers.sh  manage_servers.sh  mbra_simulator.py  ollama_internet_off.sh  ollama_internet_on.sh
(+44 files in other folders)
