[tool.poetry]
name = "ollama-proxy-server"
version = "9.0.0"
description = "A secure, high-performance FastAPI-based proxy and load balancer for Ollama."
authors = ["ParisNeo <parisneo_ai@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ParisNeo/ollama_proxy_server"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = { extras = ["email"], version = "^2.7.4" }
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"
gunicorn = "^23.0.0"
SQLAlchemy = "^2.0.31"
alembic = "^1.13.1"
python-multipart = "^0.0.18"
jinja2 = "^3.1.4"
redis = "^5.0.7"
bcrypt = "^4.1.3"
python-json-logger = "^2.0.7"
itsdangerous = "^2.2.0"
aiosqlite = "^0.20.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psutil = "^5.9.8"
numpy = "^2.3.4"
scikit-learn = "^1.5.0"
cryptography = "^42.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-bugbear = "^24.8.19"
pylint = "^3.2.6"
ruff = "^0.5.7"
tox = "^4.16.0"
tox-gh-actions = "^3.2.0"
bandit = "^1.7.9"
safety = "^3.2.4"

[tool.black]
line-length = 180

[tool.ruff]
line-length = 180

[tool.pylint.messages_control]
disable = ["C0301", "C0302", "C0303", "C0304", "C0305"]

[tool.pylint.format]
max-line-length = 180

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 180

[tool.flake8]
ignore = ["I201", "I200"]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]
max-line-length = 180
