[tool.poetry]
name = "ollama-proxy-server"
version = "9.0.0"
description = "A secure, high-performance FastAPI-based proxy and load balancer for Ollama."
authors = ["ParisNeo <parisneo_ai@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ParisNeo/ollama_proxy_server"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = { extras = ["email"], version = "^2.7.4" }
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"
gunicorn = "^23.0.0"
SQLAlchemy = "^2.0.31"
alembic = "^1.13.1"
python-multipart = "^0.0.18"
jinja2 = "^3.1.4"
redis = "^5.0.7"
bcrypt = "^4.1.3"
python-json-logger = "^2.0.7"
itsdangerous = "^2.2.0"
aiosqlite = "^0.20.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psutil = "^5.9.8"
numpy = "^2.3.4"
scikit-learn = "^1.5.0"
cryptography = "^42.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
